@@ -5,7 +5,8 @@
 1. Install *sqlimport* folder in *extension/*
 2. Activate the extension in an override of **site.ini**
 3. If you are upgrading from 1.0.x, please run the SQL script *update/sql/mysql/1.0-to-1.1.sql*.
-   Install the SQL schema (only mysql is currently supported) : *sql/mysql/schema.sql*
+   If your are upgrading from 1.1.x, please run the SQL script *update/sql/mysql/1.1-to-1.2.sql*.
+   Else, just install the SQL schema (only mysql is currently supported) : *sql/mysql/schema.sql*
 4. Regenerate autoloads for classes
 
 ::
